# doamin-model-whispeer

./: .gitignore  BACKEND_RECORDING.md  COMMIT_MESSAGE.txt  DEV_GUIDE.md  FEATURE_COMPLETE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTERVIEW_DEBUG.md  INTERVIEW_FEATURE.md  INTERVIEW_USAGE.md  LICENSE  Modelfile.mistral  ORCHESTRATE.md  README.md  REFACTOR_SUMMARY.md  SPEECH_TO_TEXT.md  SVELTE5.md  TASKS.md  Taskfile.yml  UI_IMPROVEMENTS.md  WARP.md  build-fix.sh  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
mcp/: domain_model.schema.json
mcp/manifests/: domain-model.json
mcp/mcp-server/: .env.example  .gitignore  CLI.md  Cargo.toml  NORMALIZE_TERMS.md  README.md  README_MCP.md  Taskfile.yml  VALIDATION.md  test_mcp.sh  test_new_signatures.sh  test_server.sh
mcp/mcp-server/samples/: voice.json
mcp/mcp-server/src/: cli.rs  main.rs
models/whisper/: README.md
samples/: domain-model-canvas.md  domain-model-questions.md  transcript.jsonl
src/: App.svelte  app.css  main.js
src-tauri/: .env.example  Cargo.toml  LLM_ROUTER.md  STREAMING_CLI.md  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/artifacts/: transcript.md
src-tauri/examples/: audio_session_cli.rs  llm_domain_model.rs
src-tauri/src/: audio_enhancement.rs  audio_session.rs  interview.rs  lib.rs  llm_integration.rs  llm_router.rs  main.rs  mcp_client.rs  recording_manager.rs  speech_to_text.rs  whisper.rs
src/lib/: AudioDeviceSelector.svelte  AudioInput.svelte  CanvasViewer.svelte  DomainModelInterview.svelte  MarkdownViewer.svelte  SpeechInput.svelte  tauri.ts
src/lib/types/: interview.ts
