[package]
name = "domain-model-note-taking"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "domain_model_note_taking_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16.0"
webrtc-audio-processing = { version = "0.5.0", features = ["bundled", "serde", "derive_serde"] }
webrtc-vad = "0.4.0"
whisper-rs = { version = "0.15.1" }
pulldown-cmark = "0.13.0"
anyhow = "1.0.100"
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
which = "8.0.0"
chrono = "0.4"

[dev-dependencies]
mockito = "1.6.1"
tokio-test = "0.4"

