[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[[bin]]
name = "mcp-cli"
path = "src/cli.rs"

[dependencies]
anyhow = "1.0"
jsonschema = "0.33"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.42"
sha2 = "0.10.9"
